<resources>
    <string name="app_name">Cavalier</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connexion ou inscription</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="invalid_username">Nom d\'utilisateur incorrect</string>
    <string name="invalid_password">Le mot de passe doit avoir > 5 caractères</string>
    <string name="login_failed">"Connexion échouée"</string>
    <string name="rechercher_un_club_questre">Rechercher un club équestre</string>
    <string name="isConnected">false</string>
    <string name="se_connecter">Se connecter</string>
    <string name="acceder_centre">Accéder à la fiche du centre équestre de votre choix</string>
    <string name="info_jouv">Information sur le centre équestre Les Poneys de la Jouv\'</string>
    <string name="se_deconnecter">Déconnexion</string>
    <string name="info_fouasserie">Information sur le centre équestre Les Ecuries de la Fouasserie</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="niveau">Niveau</string>
    <string name="sexe">Sexe</string>
    <string name="age">Age</string>
    <string name="num_ro_de_licence">Numéro de licence</string>
    <string name="editer_mon_compte">Editer mon compte</string>
    <string name="logo">Logo</string>
    <string name="entrez_votre_nom_de_famille">Entrez votre nom de famille</string>
    <string name="entrez_votre_pr_nom">Entrez votre prénom</string>
    <string name="entrez_votre_ge">Entrez votre âge</string>
    <string name="entrez_votre_genre">Entrez votre genre</string>
    <string name="entrez_votre_niveau_galop_1_2">Entrez votre niveau (Galop 1, 2 ...)</string>
    <string name="editer_vos_informations_personnelles">Editer vos informations personnelles</string>
    <string name="rechercher_un_cheval">Rechercher un cheval</string>
    <string name="rechercher_un_quid">Rechercher un équidé</string>
    <string name="id">Id</string>
    <string name="nom_complet">Nom Complet</string>
    <string name="nom_d_curie">Nom d\'écurie</string>
    <string name="race">Race</string>
    <string name="robe">Robe</string>
    <string name="propri_taire">Propriétaire</string>
    <string name="ecurie_d_affiliation">Ecurie d\'affiliation</string>
    <string name="vous_n_tes_pas_connect">Vous n\'êtes pas connecté</string>
    <string name="bienvenu_nom">Bienvenu</string>
    <string name="entrer_password">Choisissez un mot de pase</string>
    <string name="mon_compte">Mon compte</string>

</resources>